Doc: Added flex property information resource

--- a/doc/Resources.org
+++ b/doc/Resources.org
@@ -2,4 +2,6 @@
 #+AUTHOR: Emmanuel Bustos Torres
 
 * Useful Links
-  [[https://itnext.io/changing-children-state-from-another-component-with-react-hooks-5c982c042e8][Changing children's state from another component with React Hooks]]
+  - [[https://material-ui.com/es/][Material UI components]]
+  - [[https://itnext.io/changing-children-state-from-another-component-with-react-hooks-5c982c042e8][Changing children's state from another component with React Hooks]]
+  - [[https://css-tricks.com/snippets/css/a-guide-to-flexbox/][Flexbox information]]
