Doc: Update Resources.org

--- a/doc/Resources.org
+++ b/doc/Resources.org
@@ -3,7 +3,10 @@
 
 * Useful Links
   - [[https://material-ui.com/es/][Material UI components]]
+  - [[https://reactjs.org/docs/hooks-intro.html][React hooks]]
   - [[https://itnext.io/changing-children-state-from-another-component-with-react-hooks-5c982c042e8][Changing children's state from another component with React Hooks]]
   - [[https://css-tricks.com/snippets/css/a-guide-to-flexbox/][Flexbox information]]
   - [[https://medium.com/@oleg008/arrow-functions-in-react-f782d11460b4][Arrow Functions in React]]
   - [[https://medium.com/@Zwenza/functional-vs-class-components-in-react-231e3fbd7108][Functional vs class components]]
+  - [[https://stackoverflow.com/questions/45847090/media-queries-in-material-ui-components][Inline media queries with Material UI]]
+  
